[package]
name = "dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = { version = "0.33", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = "1"
log = "0.4"
env_logger = "0.10"
rustyline = "11"
